--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Me, Myself and I (professionally)</a>
+            <a class="navbar-brand" href="index.html">Sven Degroeve, PhD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,10 +28,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="experience.html">Experience</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="skills.html">Skills</a>
-                    </li>
-                    <li class="nav-item">
+                        <li class="nav-item">
                         <a class="nav-link" href="education.html">Education</a>
                     </li>
                     <li class="nav-item">
@@ -46,7 +43,7 @@
         <!-- Hero Section -->
         <section class="hero py-5 mt-5">
             <div class="container py-5">
-                <div class="row align-items-center">
+                <div class="row justify-content-center">
                     <div class="col-md-8">
                         <h1 class="display-4">Sven Degroeve</h1>
                         <h2 class="h4 text-muted"><span id="typing-animation"></span></h2>
@@ -64,7 +61,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="py-4" style="background-color: #333; color: #fff">
+    <footer class="py-4">
         <div class="container text-center">
             <small>&copy; 2024 Sven Degroeve. All rights reserved.</small>
         </div>
