--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - John Doe Portfolio</title>
+    <title>Contact - Sven Degroeve</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">John Doe</a>
+            <a class="navbar-brand" href="index.html">Sven Degroeve, PhD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -54,7 +54,7 @@
                                     <h5 class="card-title mb-4">Contact Information</h5>
                                     <div class="d-flex align-items-center mb-3">
                                         <i class="fas fa-envelope fa-fw me-2"></i>
-                                        <span>john.doe@example.com</span>
+                                        <span>sven.degroeve@example.com</span>
                                     </div>
                                     <div class="d-flex align-items-center mb-3">
                                         <i class="fas fa-phone fa-fw me-2"></i>
@@ -130,9 +130,9 @@
     </section>
 
     <!-- Footer -->
-    <footer class="py-4" style="background-color: #333; color: #fff">
+    <footer class="py-4">
         <div class="container text-center">
-            <small>&copy; 2023 John Doe. All rights reserved.</small>
+            <small>&copy; 2024 Sven Degroeve. All rights reserved.</small>
         </div>
     </footer>
 
