--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Education - John Doe Portfolio</title>
+    <title>Education - Sven Degroeve</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">John Doe</a>
+            <a class="navbar-brand" href="index.html">Sven Degroeve, PhD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,7 +44,7 @@
     <!-- Education Section -->
     <section class="py-5 mt-5">
         <div class="container">
-            <h2 class="text-center mb-5">Education</h2>
+            <h2 class="text-center mb-5">EDUCATION</h2>
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <div class="card mb-4">
@@ -52,23 +52,12 @@
                             <div class="d-flex align-items-center mb-3">
                                 <i class="fas fa-graduation-cap fa-2x me-3"></i>
                                 <div>
-                                    <h5 class="card-title mb-0">Master of Science in Computer Science</h5>
-                                    <h6 class="card-subtitle text-muted">Stanford University | 2015 - 2017</h6>
+                                    <h5 class="card-title mb-0">Doctorate (Ph.D.) in Sciences: Computer Science</h5>
+                                    <h6 class="card-subtitle text-muted">Ghent University | 2001 – 2004</h6>
                                 </div>
                             </div>
                             <p class="card-text">
-                                <strong>Specialization:</strong> Artificial Intelligence and Machine Learning<br>
-                                <strong>GPA:</strong> 3.9/4.0<br>
-                                <strong>Key Courses:</strong>
-                            </p>
-                            <ul class="list-unstyled ps-4">
-                                <li>• Advanced Machine Learning Algorithms</li>
-                                <li>• Neural Networks and Deep Learning</li>
-                                <li>• Distributed Systems</li>
-                                <li>• Advanced Software Engineering</li>
-                            </ul>
-                            <p class="card-text mt-3">
-                                <strong>Thesis:</strong> "Implementation of Deep Learning Models for Real-time Object Detection"
+                                <strong>Title of thesis:</strong> "Design and evaluation of a linear classification strategy for gene structural element recognition"
                             </p>
                         </div>
                     </div>
@@ -78,51 +67,70 @@
                             <div class="d-flex align-items-center mb-3">
                                 <i class="fas fa-graduation-cap fa-2x me-3"></i>
                                 <div>
-                                    <h5 class="card-title mb-0">Bachelor of Science in Computer Engineering</h5>
-                                    <h6 class="card-subtitle text-muted">MIT | 2011 - 2015</h6>
+                                    <h5 class="card-title mb-0">Licentiate (Master in Sciences) in Computer Science</h5>
+                                    <h6 class="card-subtitle text-muted">Ghent University | 1997 - 1999</h6>
                                 </div>
                             </div>
                             <p class="card-text">
-                                <strong>GPA:</strong> 3.8/4.0<br>
-                                <strong>Honors:</strong> Graduated with High Distinction<br>
-                                <strong>Key Courses:</strong>
-                            </p>
-                            <ul class="list-unstyled ps-4">
-                                <li>• Data Structures and Algorithms</li>
-                                <li>• Computer Architecture</li>
-                                <li>• Operating Systems</li>
-                                <li>• Software Engineering Principles</li>
-                            </ul>
-                            <p class="card-text mt-3">
-                                <strong>Senior Project:</strong> "Development of an Automated Testing Framework for Distributed Systems"
+                                <strong>Title of thesis:</strong> "Classification of skin lesions with neural networks"
                             </p>
                         </div>
                     </div>
 
-                    <div class="card">
+                    <div class="card mb-4">
                         <div class="card-body">
-                            <h5 class="card-title mb-4">Certifications</h5>
+                            <h5 class="card-title mb-4">Certificates</h5>
                             <div class="d-flex align-items-center mb-3">
                                 <i class="fas fa-certificate me-3"></i>
                                 <div>
-                                    <h6 class="mb-0">AWS Certified Solutions Architect</h6>
-                                    <small class="text-muted">Amazon Web Services | 2022</small>
+                                    <h6 class="mb-0">Neural Networks and Deep Learning</h6>
+                                    <small class="text-muted">Coursera | Nov 2019</small>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center mb-3">
                                 <i class="fas fa-certificate me-3"></i>
                                 <div>
-                                    <h6 class="mb-0">Google Cloud Professional Developer</h6>
-                                    <small class="text-muted">Google | 2021</small>
+                                    <h6 class="mb-0">Structuring Machine Learning Projects</h6>
+                                    <small class="text-muted">Coursera | Jan 2020</small>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-certificate me-3"></i>
                                 <div>
-                                    <h6 class="mb-0">Professional Scrum Master I</h6>
-                                    <small class="text-muted">Scrum.org | 2020</small>
+                                    <h6 class="mb-0">Improving Deep Neural Networks: Hyperparameter tuning, Regularization and Optimization</h6>
+                                    <small class="text-muted">Coursera | Jan 2020</small>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <h5 class="card-title mb-4">Teaching</h5>
+                            <div class="mb-4">
+                                <h6 class="mb-1">Machine Learning methods for Biomedical Data (D012554)</h6>
+                                <p class="text-muted mb-1">Ghent University | yearly since 2016</p>
+                                <p class="mb-0">55 hours</p>
+                            </div>
+                            <div class="mb-4">
+                                <h6 class="mb-1">Large scale analysis of Biomedical Data (D013628)</h6>
+                                <p class="text-muted mb-1">Ghent University | yearly since 2015</p>
+                                <p class="mb-0">10 hours</p>
+                            </div>
+                            <div>
+                                <h6 class="mb-1">Machine Learning & Deep Learning Workshop</h6>
+                                <p class="text-muted mb-1">Flemish Institute for Biotechnology (VIB) | twice a year since 2018</p>
+                                <p class="mb-0">32 hours</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-body">
+                            <h5 class="card-title mb-4">Patents</h5>
+                            <p class="card-text">
+                                Kas, K., Vanpoucke, G., Degroeve, S., & Huijben, K. (2010). Biomarkers and Methods for Diagnosing, Predicting and/or Prognosing Sepsis and Uses Thereof. U.S. Patent Application No. 20100292131.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -131,9 +139,9 @@
     </section>
 
     <!-- Footer -->
-    <footer class="py-4" style="background-color: #333; color: #fff">
+    <footer class="py-4">
         <div class="container text-center">
-            <small>&copy; 2023 John Doe. All rights reserved.</small>
+            <small>&copy; 2024 Sven Degroeve. All rights reserved.</small>
         </div>
     </footer>
 
