--- a/skills.html
+++ b/skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skills - John Doe Portfolio</title>
+    <title>Skills - Sven Degroeve</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">John Doe</a>
+            <a class="navbar-brand" href="index.html">Sven Degroeve, PhD</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,22 +44,25 @@
     <!-- Skills Section -->
     <section class="py-5 mt-5">
         <div class="container">
-            <h2 class="text-center mb-5">Technical Skills</h2>
-            <div class="row g-4">
+            <h2 class="text-center mb-5">SKILLS</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="row g-4">
                 <div class="col-md-6 col-lg-4">
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">
                                 <i class="fas fa-code me-2"></i>
-                                Frontend Development
+                                Programming
                             </h5>
                             <ul class="list-unstyled">
-                                <li class="mb-2">• HTML5/CSS3</li>
-                                <li class="mb-2">• JavaScript/TypeScript</li>
-                                <li class="mb-2">• React.js</li>
-                                <li class="mb-2">• Vue.js</li>
-                                <li class="mb-2">• Bootstrap/Tailwind CSS</li>
-                                <li>• Responsive Web Design</li>
+                                <li class="mb-2">• Python</li>
+                                <li class="mb-2">• Numpy, Pandas</li>
+                                <li class="mb-2">• C, Cython</li>
+                                <li class="mb-2">• R</li>
+                                <li class="mb-2">• Javascript, HTML</li>
+                                <li class="mb-2">• SQL, PostgresQL</li>
+                                <li>• Jupyter Notebooks/Lab, Visual Studio Code</li>
                             </ul>
                         </div>
                     </div>
@@ -68,16 +71,64 @@
                     <div class="card h-100">
                         <div class="card-body">
                             <h5 class="card-title">
-                                <i class="fas fa-server me-2"></i>
-                                Backend Development
+                                <i class="fas fa-brain me-2"></i>
+                                Machine Learning
                             </h5>
                             <ul class="list-unstyled">
-                                <li class="mb-2">• Node.js/Express.js</li>
-                                <li class="mb-2">• Python/Django</li>
-                                <li class="mb-2">• RESTful APIs</li>
-                                <li class="mb-2">• GraphQL</li>
-                                <li class="mb-2">• MongoDB/PostgreSQL</li>
-                                <li>• Microservices Architecture</li>
+                                <li class="mb-2">• Scikit-learn</li>
+                                <li class="mb-2">• Auto-sklearn</li>
+                                <li class="mb-2">• scikit-multilearn</li>
+                                <li class="mb-2">• Hyperopt</li>
+                                <li>• Kaggle</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <i class="fas fa-network-wired me-2"></i>
+                                Deep Learning
+                            </h5>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• PyTorch (lightning)</li>
+                                <li class="mb-2">• Tensorflow, Keras</li>
+                                <li class="mb-2">• HuggingFace API</li>
+                                <li class="mb-2">• Weights&Biases, MLFlow</li>
+                                <li class="mb-2">• AutoKeras</li>
+                                <li>• Google AutoML Vision</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <i class="fas fa-robot me-2"></i>
+                                Reinforcement & Generative AI
+                            </h5>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• Stable-Baselines3</li>
+                                <li class="mb-2">• OpenAI Gym</li>
+                                <li class="mb-2">• LangChain</li>
+                                <li>• LangGraph</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card h-100">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <i class="fas fa-chart-bar me-2"></i>
+                                Data Exploration
+                            </h5>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• Seaborn</li>
+                                <li class="mb-2">• Plotly</li>
+                                <li>• Tableau Software</li>
                             </ul>
                         </div>
                     </div>
@@ -87,71 +138,19 @@
                         <div class="card-body">
                             <h5 class="card-title">
                                 <i class="fas fa-cloud me-2"></i>
-                                DevOps & Cloud
+                                Cloud & Other
                             </h5>
                             <ul class="list-unstyled">
-                                <li class="mb-2">• AWS Services</li>
-                                <li class="mb-2">• Docker/Kubernetes</li>
-                                <li class="mb-2">• CI/CD Pipelines</li>
-                                <li class="mb-2">• Git/GitHub</li>
-                                <li class="mb-2">• Linux/Unix</li>
-                                <li>• Cloud Architecture</li>
+                                <li class="mb-2">• Google Compute Engine (Vertex AI)</li>
+                                <li class="mb-2">• Microsoft Azure</li>
+                                <li class="mb-2">• AWS, Kubernetes, GitHub</li>
+                                <li class="mb-2">• Docker</li>
+                                <li class="mb-2">• Flask</li>
+                                <li>• Streamlit</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="fas fa-tools me-2"></i>
-                                Tools & Methods
-                            </h5>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">• Agile/Scrum</li>
-                                <li class="mb-2">• JIRA/Confluence</li>
-                                <li class="mb-2">• VS Code/IntelliJ</li>
-                                <li class="mb-2">• Postman</li>
-                                <li class="mb-2">• Jest/Mocha</li>
-                                <li>• Webpack/Babel</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="fas fa-mobile-alt me-2"></i>
-                                Mobile Development
-                            </h5>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">• React Native</li>
-                                <li class="mb-2">• iOS Development</li>
-                                <li class="mb-2">• Android Development</li>
-                                <li class="mb-2">• Flutter</li>
-                                <li class="mb-2">• Mobile UI/UX</li>
-                                <li>• App Store Deployment</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h5 class="card-title">
-                                <i class="fas fa-shield-alt me-2"></i>
-                                Security & Performance
-                            </h5>
-                            <ul class="list-unstyled">
-                                <li class="mb-2">• Web Security</li>
-                                <li class="mb-2">• OAuth/JWT</li>
-                                <li class="mb-2">• Performance Optimization</li>
-                                <li class="mb-2">• SSL/TLS</li>
-                                <li class="mb-2">• Code Analysis</li>
-                                <li>• Security Best Practices</li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -159,9 +158,9 @@
     </section>
 
     <!-- Footer -->
-    <footer class="py-4" style="background-color: #333; color: #fff">
+    <footer class="py-4">
         <div class="container text-center">
-            <small>&copy; 2023 John Doe. All rights reserved.</small>
+            <small>&copy; 2024 Sven Degroeve. All rights reserved.</small>
         </div>
     </footer>
 
