cleaner, updated to 2025

--- a/index.html
+++ b/index.html
@@ -13,31 +13,6 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">Sven Degroeve, PhD</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="experience.html">Experience</a>
-                    </li>
-                        <li class="nav-item">
-                        <a class="nav-link" href="education.html">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
     <main>
         <!-- Hero Section -->
@@ -45,14 +20,12 @@
             <div class="container py-5">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
-                        <h1 class="display-4">Sven Degroeve</h1>
+                        <h1 class="display-4">SVEN DEGROEVE</h1>
                         <h2 class="h4 text-muted"><span id="typing-animation"></span></h2>
                         <p class="lead mt-4">
-                            With a keen passion for being an AI evangelist, I aim to inspire organizations to harness the power of artificial intelligence for business growth.
-                        </p>
+                            With over two decades of experience in Artificial Intelligence, I have successfully navigated the intersection of research and industry, leveraging AI to address complex, real-world challenges. My expertise spans statistics, data analysis, machine learning, and deep learning, with a proven ability to translate AI innovations into impactful natural language processing, biotechnology, and biomedical predictive modeling solutions. I quickly absorb and apply new concepts, and I excel at articulating complex ideas in a clear and accessible way. As a strong team player, I thrive in dynamic environments, effectively bridging the gap between technical expertise and business strategy. I am now eager to apply my AI expertise, strategic problem-solving skills, and communication strengths in an industry-driven role, where I can drive innovation, product development, and business growth.                        </p>
                         <div class="mt-4">
-                            <a href="contact.html" class="btn me-2">Contact Me</a>
-                            <a href="#" class="btn" style="background-color: transparent; border: 1px solid #333; color: #333">Download CV</a>
+                            <a href="Sven_Degroeve_CV.pdf" target="_blank" class="btn" style="background-color: transparent; border: 1px solid #333; color: #333">Download CV</a>
                         </div>
                     </div>
                 </div>
