--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="container py-5">
                 <div class="row justify-content-center">
                     <div class="col-md-8">
-                        <h1 class="display-4">SVEN DEGROEVE</h1>
+                        <h1 class="display-4">SVEN DEGROEVE, PhD</h1>
                         <h2 class="h4 text-muted"><span id="typing-animation"></span></h2>
                         <p class="lead mt-4">
                             With over two decades of experience in Artificial Intelligence, I have successfully navigated the intersection of research and industry, leveraging AI to address complex, real-world challenges. My expertise spans statistics, data analysis, machine learning, and deep learning, with a proven ability to translate AI innovations into impactful natural language processing, biotechnology, and biomedical predictive modeling solutions. I quickly absorb and apply new concepts, and I excel at articulating complex ideas in a clear and accessible way. As a strong team player, I thrive in dynamic environments, effectively bridging the gap between technical expertise and business strategy. I am now eager to apply my AI expertise, strategic problem-solving skills, and communication strengths in an industry-driven role, where I can drive innovation, product development, and business growth.                        </p>
