--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
                         <p class="lead mt-4">
                             With over two decades of experience in Artificial Intelligence, I have successfully navigated the intersection of research and industry, leveraging AI to address complex, real-world challenges. My expertise spans statistics, data analysis, machine learning, and deep learning, with a proven ability to translate AI innovations into impactful natural language processing, biotechnology, and biomedical predictive modeling solutions. I quickly absorb and apply new concepts, and I excel at articulating complex ideas in a clear and accessible way. As a strong team player, I thrive in dynamic environments, effectively bridging the gap between technical expertise and business strategy. I am now eager to apply my AI expertise, strategic problem-solving skills, and communication strengths in an industry-driven role, where I can drive innovation, product development, and business growth.                        </p>
                         <div class="mt-4">
-                            <a href="Sven_Degroeve_CV_ENG.pdf" target="_blank" class="btn" style="background-color: transparent; border: 1px solid #333; color: #333">Download CV (ENG)</a>
-                            <a href="Sven_Degroeve_CV_NL.pdf" target="_blank" class="btn" style="background-color: transparent; border: 1px solid #333; color: #333">Download CV (NL)</a>
+                            <a href="Sven_Degroeve_CV_ENG.pdf" target="_blank" class="btn" style="background-color: transparent; border: 1px solid #333; color: #333">Download CV</a>
                         </div>
                     </div>
                 </div>
